# investapp

./: .gitignore  CLAUDE.md  LICENSE  README.md  cloudbuild.yaml  deploy.ps1  docker-compose.yml  openapi.json  pyproject.toml  requirements-api.txt  requirements-ui.txt  start.sh
api/: auth_utils.py  dependencies.py  main.py  models.py
api/routers/: auth.py  holdings.py  market.py  oauth.py  portfolio.py  watchlist.py
api/services/: db.py  holdings_store.py  market.py  metrics.py  users_store.py  watchlist_store.py
design/: DESIGN.md
docker/api/: Dockerfile
docker/ui/: Dockerfile
src/marketresearch/: api_client.py  logo_b64.py  main.py  routes.py  theme.py
src/marketresearch/assets/: index.html
src/marketresearch/components/: app_bar.py  asset_list_item.py  bottom_nav.py  chip.py  investment_card.py
src/marketresearch/screens/: analysis.py  asset_detail.py  dashboard.py  holdings.py  login.py  summary.py  watchlist.py
src/my_flet_app/: api_client.py  logo_b64.py  main.py  routes.py  theme.py
src/my_flet_app/components/: app_bar.py  asset_list_item.py  bottom_nav.py  chip.py  investment_card.py
src/my_flet_app/data/: fixtures.py
src/my_flet_app/screens/: analysis.py  asset_detail.py  dashboard.py  holdings.py  login.py  summary.py
