[project]
name = "marketresearch"
version = "0.1.0"
description = "Cross-platform Flet application"
authors = []
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flet (>=0.84.0,<0.85.0)",
    "uvicorn[standard] (>=0.35.0)",
    "finnhub-python (>=2.4.28)",
    "yfinance (>=1.3.0)",
    "python-dotenv (>=1.0.0)",
    "fastapi (>=0.115.0)",
    "httpx (>=0.27.0)"
]


[project.scripts]
marketresearch = "marketresearch.main:main"

[tool.poetry]
packages = [{include = "marketresearch", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
